math: removed internal valhalla annotations